<resources>
    <string name="app_name">WallHavenApp</string>
    <string name="title_latest">Latest</string>
    <string name="title_toplist">Toplist</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="search_hint">Search…</string>

    <string name="selected_wallpaper_fragment">Selected Wallpaper Fragment</string>
    <string name="search">Search</string>

    <string name="resolutionTitle">Resolution</string>
    <string name="categoryTitle">Category</string>
    <string name="sizeTitle">Size</string>
    <string name="viewsTitle">Views</string>
    <string name="purityTitle">Purity</string>
    <string name="tagsTitle">Tags</string>

    <string name="searchSettingsTitle">Search Settings</string>
    <string name="generalTitle">General</string>
    <string name="animeTitle">Anime</string>
    <string name="peopleTitle">People</string>
    <string name="sfwTitle">SFW</string>
    <string name="sketchyTitle">Sketchy</string>

    <string name="generalCategoryDescription">Filter wallpapers in general category</string>
    <string name="animeCategoryDescription">Filter wallpapers in anime category</string>
    <string name="peopleCategoryDescription">Filter wallpapers in people category</string>

    <string name="GENERAL_CATEGORY_TAG">com.example.wallhavenapp.generalcategory</string>
    <string name="ANIME_CATEGORY_TAG">com.example.wallhavenapp.animecategory</string>
    <string name="PEOPLE_CATEGORY_TAG">com.example.wallhavenapp.peoplecategory</string>
    <string name="SFW_PURITY_TAG">com.example.wallhavenapp.sfwpurity</string>
    <string name="SKETCHY_PURITY_TAG">com.example.wallhavenapp.sketchypurity</string>

</resources>
