<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <PreferenceCategory
        android:title="Categories"
        app:allowDividerBelow="true"/>

    <androidx.preference.SwitchPreference
        android:defaultValue="true"
        android:key="@string/GENERAL_CATEGORY_TAG"
        android:summary="@string/generalCategoryDescription"
        android:title="@string/generalTitle" />

    <androidx.preference.SwitchPreference
        android:defaultValue="true"
        android:key="@string/ANIME_CATEGORY_TAG"
        android:summary="@string/animeCategoryDescription"
        android:title="@string/animeTitle" />

    <androidx.preference.SwitchPreference
        android:defaultValue="true"
        android:key="@string/PEOPLE_CATEGORY_TAG"
        android:summary="@string/peopleCategoryDescription"
        android:title="@string/peopleTitle" />

    <PreferenceCategory
        android:title="Purity"
        app:allowDividerBelow="true"/>

    <androidx.preference.SwitchPreference
        android:defaultValue="true"
        android:key="@string/SFW_PURITY_TAG"
        android:title="@string/sfwTitle" />

    <androidx.preference.SwitchPreference
        android:defaultValue="false"
        android:key="@string/SKETCHY_PURITY_TAG"
        android:title="@string/sketchyTitle" />


</PreferenceScreen>